force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/Kinetic_Link_Recipient_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Kinetic Link Recipient Configuration to enable sending sms or email to any recipient.</description>
    <label>Kinetic Link Recipient Configuration</label>
    <pluralLabel>Kinetic Link Recipient Configurations</pluralLabel>
</CustomObject>