force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/fields/Email_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Field_API_Name__c</fullName>
    <description>Specify Field API Name to be used for Email value</description>
    <inlineHelpText>Specify Field API Name to be used for Email value</inlineHelpText>
    <label>Email Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>