force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/fields/Field_API_Name_for_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name_for_Greeting__c</fullName>
    <description>Specify Field API Name from Parent Related Record which can be used for Greeting name</description>
    <inlineHelpText>Specify Field API Name from Parent Related Record which can be used for Greeting name</inlineHelpText>
    <label>Field API Name for Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>