force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to make this configuration active for use</description>
    <inlineHelpText>Enable to make this configuration active for use</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>