force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/fields/MobilePhone_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone_Field_API_Name__c</fullName>
    <description>Specify Field API Name to be used for MobilePhone value</description>
    <inlineHelpText>Specify Field API Name to be used for MobilePhone value</inlineHelpText>
    <label>MobilePhone Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>