force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Specify Parent Object Name for Kinetic Invitation</description>
    <inlineHelpText>Specify Parent Object Name for Kinetic Invitation</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>