force-app/main/default/objects/Kinetic_Link_Recipient_Configuration__mdt/fields/Relationship_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_API_Name__c</fullName>
    <description>Specify Relationship Field API Name on Survey Invitation record</description>
    <inlineHelpText>Specify Relationship Field API Name on Survey Invitation record</inlineHelpText>
    <label>Relationship Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>